@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:21:44 brook Exp $
+
+SHA1 (tex-beamerposter-47508/beamerposter.doc.tar.xz) = 89dc6f066f83893a4645987bf4f8a609a3b1c690
+RMD160 (tex-beamerposter-47508/beamerposter.doc.tar.xz) = b5821374ffcf19fae17a7c5446ce93f3b1274c1b
+SHA512 (tex-beamerposter-47508/beamerposter.doc.tar.xz) = 88ec2b723a551711c33972cb72b7ab9ac13508f583e4e26eaa1c9e6d57d537667259b4f93e7e33fd2a5db8086998f6ddef05c363613be645eb293606d72cd52f
+Size (tex-beamerposter-47508/beamerposter.doc.tar.xz) = 77044 bytes
